added header nav

--- a/source/sass/general/fonts.scss
+++ b/source/sass/general/fonts.scss
@@ -1,15 +1,23 @@
 @font-face {
   font-style: normal;
-  font-weight: 400;
-  font-family: "Oswald";
+  font-weight: 300;
+  font-family: 'MuseoSansCyrl';
   font-display: swap;
-  src: url("../fonts/oswaldregular.woff2") format("woff2"), url("../fonts/oswaldregular.woff") format("woff");
+  src: url("../fonts/MuseoSansCyrl-300.woff2") format("woff2"), url("../MuseoSansCyrl-300.woff") format("woff");
 }
 
 @font-face {
   font-style: normal;
   font-weight: 500;
-  font-family: "Oswald";
+  font-family: 'MuseoSansCyrl';
   font-display: swap;
-  src: url("../fonts/oswaldmedium.woff2") format("woff2"), url("../fonts/oswaldmedium.woff") format("woff");
+  src: url("../fonts/MuseoSansCyrl-500.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-500.woff2") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: 'MuseoSansCyrl';
+  font-display: swap;
+  src: url("../fonts/MuseoSansCyrl-700.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-700.woff2") format("woff");
 }
