--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,9 +5,31 @@
 
   &__logo {
     width: 250px;
+  }
 
-    img {
-      width: 100%;
+  &__official {       
+    font-size: 12px;
+    text-align: center;
+    color: #fff;
+
+    span {
+      display: block;
+      font-size: 18px;
+      line-height: 29px;      
     }
+  }
+
+  &__contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  &__phone {
+    display: block;        
+    font-weight: 700;
+    font-size: 18px;   
+    line-height: 18px;  
+    margin-bottom: 4px;   
   }
 }
