--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;  
+  font-family: 'MuseoSansCyrl', sans-serif;
+  font-size: 16px;  
+  font-weight: 500;  
 }
 
 html {
