--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,9 +2,18 @@
   width: 150px;
   height: 30px;
   background-color: #C70101;
-  border-radius: 5px;  
+  border-radius: 5px;
   font-size: 12px;
   line-height: 19px;
   color: #fff;
   text-transform: uppercase;
+
+  &__main {
+    width: 300px;
+    height: 50px;
+    margin-top: 65px;
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 500;
+  }
 }
