--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,5 +1,64 @@
 .promo {
-    min-height: 650px;
-    padding: 21px 0 93px 0;
-    background: url(../img/background/promo-bg.png) center (center/cover) no-repeat;
+  min-height: 650px;
+  padding: 21px 0 93px 0;
+  background: url(../img/background/promo-bg.png) center (center/cover) no-repeat;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 90px;
+  }
+
+  &__header {
+    font-size: 42px;
+    line-height: 42px;
+    font-weight: 700;
+    color: #ffffff;
+    text-transform: uppercase;
+  }
+
+  &__subheader {
+    margin-top: 15px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 24px;
+    color: #ffffff;
+    text-transform: uppercase;
+  }
+
+  &__icons {
+    margin-top: 60px;
+    width: 425px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__icon {
+    width: 108px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    color: #ffffff;
+
+    img {
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 20px;
+    }
+  }
+
+  &__link {
+    margin-top: 20px;
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 25px;
+
+    a {
+      font-weight: 500;
+      text-transform: uppercase;
+      text-decoration: underline;
+    }
+  }
 }
