--- a/source/sass/general/blocks.scss
+++ b/source/sass/general/blocks.scss
@@ -1,7 +1,6 @@
 @import "blocks/promo.scss";
 @import "blocks/header.scss";
 @import "blocks/button.scss";
-
-
 @import "blocks/title.scss";
+@import "blocks/advantage.scss";
 
