--- a/source/sass/general/blocks.scss
+++ b/source/sass/general/blocks.scss
@@ -3,4 +3,6 @@
 @import "blocks/button.scss";
 @import "blocks/title.scss";
 @import "blocks/advantage.scss";
+@import "blocks/consultation.scss";
+@import "blocks/forms.scss";
 
