--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -16,4 +16,10 @@
     line-height: 25px;
     font-weight: 500;
   }
+
+  &__submit {
+    width: 100%;
+    height: 55px;
+    font-size: 16px;
+  }
 }
