added carousel section

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,11 +1,11 @@
 .button {
   width: 150px;
   height: 30px;
-  background-color: #C70101;
+  background-color: #c70101;
   border-radius: 5px;
   font-size: 12px;
   line-height: 19px;
-  color: #fff;
+  color: #ffffff;
   text-transform: uppercase;
 
   &__main {
