--- a/source/sass/general/blocks.scss
+++ b/source/sass/general/blocks.scss
@@ -5,4 +5,5 @@
 @import "blocks/advantage.scss";
 @import "blocks/consultation.scss";
 @import "blocks/forms.scss";
+@import "blocks/carousel.scss";
 
