--- a/source/sass/blocks/forms.scss
+++ b/source/sass/blocks/forms.scss
@@ -11,7 +11,7 @@
     padding: 0 20px;
     font-size: 14px;
     font-weight: 300;
-    color: #4B4B4B;
+    color: #4b4b4b;
     margin-bottom: 15px;
     border: none;
 
