added catalog section and tabs

--- a/source/sass/general/blocks.scss
+++ b/source/sass/general/blocks.scss
@@ -6,4 +6,5 @@
 @import "blocks/consultation.scss";
 @import "blocks/forms.scss";
 @import "blocks/carousel.scss";
+@import "blocks/catalog.scss";
 
