--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'MuseoSansCyrl', sans-serif;
+  font-family: "MuseoSansCyrl", sans-serif;
   font-size: 16px;
   font-weight: 400;
 }
@@ -56,7 +56,7 @@ a {
   display: inline-block;
   text-decoration: none;
   cursor: pointer;
-  color: #fff;
+  color: #ffffff;
 
   &:visited {
     color: inherit;
