--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -22,4 +22,10 @@
     height: 55px;
     font-size: 16px;
   }
+
+  &__catalog {
+    width: 131px;
+    height: 40px;
+    font-size: 14px;
+  }
 }
