--- a/source/sass/blocks/forms.scss
+++ b/source/sass/blocks/forms.scss
@@ -19,4 +19,14 @@
       margin-bottom: 20px;
     }
   }
+
+  &__modal {
+    margin-top: 25px;
+  }
+}
+
+#consultation,
+#order,
+#thanks {
+  display: none;
 }
