--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -81,3 +81,12 @@ a {
   max-width: 950px;
   margin: 0 auto;
 }
+
+.overlay {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.56);
+  top: 0;
+}
