added  smooth up scroll

--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -90,3 +90,16 @@ a {
   background-color: rgba(0, 0, 0, 0.56);
   top: 0;
 }
+
+.pageup {
+  display: none;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  width: 40px;
+  height: 40px;
+
+  img {
+    width: 100%;
+  }
+}
