--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,4 +2,5 @@
 @import "general/slick";
 @import "general/fonts";
 @import "general/global";
+@import "general/animations";
 @import "general/blocks";
