--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -41,4 +41,12 @@
       margin-left: 25px;
     }
   }
+
+  &__map {
+    iframe {
+      width: 100%;
+      height: 630px;
+      border: 0;
+    }
+  }
 }
