--- a/source/sass/general/fonts.scss
+++ b/source/sass/general/fonts.scss
@@ -1,15 +1,15 @@
 @font-face {
   font-style: normal;
   font-weight: 300;
-  font-family: 'MuseoSansCyrl';
+  font-family: "MuseoSansCyrl";
   font-display: swap;
-  src: url("../fonts/MuseoSansCyrl-300.woff2") format("woff2"), url("../MuseoSansCyrl-300.woff") format("woff");
+  src: url("../fonts/MuseoSansCyrl-300.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-300.woff") format("woff");
 }
 
 @font-face {
   font-style: normal;
   font-weight: 500;
-  font-family: 'MuseoSansCyrl';
+  font-family: "MuseoSansCyrl";
   font-display: swap;
   src: url("../fonts/MuseoSansCyrl-500.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-500.woff2") format("woff");
 }
@@ -17,7 +17,7 @@
 @font-face {
   font-style: normal;
   font-weight: 700;
-  font-family: 'MuseoSansCyrl';
+  font-family: "MuseoSansCyrl";
   font-display: swap;
   src: url("../fonts/MuseoSansCyrl-700.woff2") format("woff2"), url("../fonts/MuseoSansCyrl-700.woff2") format("woff");
 }
